<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ww.www.www.login_with_pin_code.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Text_View_Enter_PIN_Code"
        android:text="@string/text_enter_pin_code"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        style="@style/Shadow_Middle_Dark"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Text_View_Stars"
        android:layout_below="@id/Text_View_Enter_PIN_Code"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textSize="24sp"
        style="@style/Shadow_Small_Dark"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Linear_layout_1"
        android:layout_below="@id/Text_View_Stars"
        android:gravity="center_horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Button_1"
            android:text="1"
            style="@style/Buttons_Numeric"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Button_2"
            android:text="2"
            style="@style/Buttons_Numeric"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Button_3"
            android:text="3"
            style="@style/Buttons_Numeric"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Linear_layout_2"
        android:gravity="center_horizontal"
        android:layout_below="@id/Linear_layout_1">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Button_4"
            android:text="4"
            style="@style/Buttons_Numeric"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Button_5"
            android:text="5"
            style="@style/Buttons_Numeric"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Button_6"
            android:text="6"
            style="@style/Buttons_Numeric"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Linear_layout_3"
        android:gravity="center_horizontal"
        android:layout_below="@id/Linear_layout_2">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Button_7"
            android:text="7"
            style="@style/Buttons_Numeric"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Button_8"
            android:text="8"
            style="@style/Buttons_Numeric"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Button_9"
            android:text="9"
            style="@style/Buttons_Numeric"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Linear_layout_4"
        android:gravity="center_horizontal"
        android:layout_below="@id/Linear_layout_3">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Button_back"
            android:text="&lt;--"
            style="@style/Buttons_Numeric"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Button_0"
            android:text="0"
            style="@style/Buttons_Numeric"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Button_enter"
            android:text="@string/text_enter"
            style="@style/Buttons_Numeric" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Text_View_Dialogue"
        android:text="@string/text_not_logged_in"
        android:gravity="center_horizontal"
        android:layout_below="@id/Linear_layout_4"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/Red"
        style="@style/Shadow_Small_Dark"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Button_logout"
        android:text="@string/text_logout"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:layout_below="@id/Text_View_Dialogue"
        android:background="@drawable/roundedbutton_red"
        android:textColor="@color/white"
        style="@style/Shadow_Middle_Light"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Text_View_Copyright"
        android:text="@string/text_Copyright"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        style="@style/Shadow_Small_Dark"/>
</RelativeLayout>
